feat: introduce declarative UI component system and enhance navigation
- Added a new declarative UI component system in `internal/ui/component/` for building TUI views using nested components and chainable modifiers.
- Implemented a selection interface for blockchain options with improved keyboard navigation.
- Updated the main page to utilize the new component system, enhancing the display of selected options and help instructions.
- Introduced tests for the new component system to ensure functionality and reliability.
- Updated dependencies in `go.mod` and `go.sum` to include new libraries for the component system.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -166,6 +166,11 @@ issues:
       linters:
         - stylecheck
 
+    # Exclude component package from godot (type names like "If" cause false positives)
+    - path: internal/ui/component/
+      linters:
+        - godot
+
     # Exclude generated files from all linters
     - path: _gen\.go
       linters:
