feat: enhance CI workflow and improve storage client management
- Added a GitHub Actions CI workflow for linting, formatting checks, and testing.
- Updated `.golangci.yml` to exclude vendor and third-party directories from linting.
- Enhanced the `Makefile` to ensure proper stopping of the Anvil network during tests.
- Introduced a new storage client management page with improved user interaction for SQLite and Postgres configurations.
- Implemented secure storage functionality for managing client configurations, including validation and error handling.
- Added tests for the new storage client page to ensure functionality and reliability.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -134,6 +134,11 @@ linters-settings:
       - github.com/rxtech-lab/smart-contract-cli/*
 
 issues:
+  exclude-dirs:
+    - vendor
+    - third_party
+  exclude-files:
+    - ".*\\.pb\\.go$"
   exclude-rules:
     # Exclude some linters from running on tests files
     - path: _test\.go
