--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,14 +2,14 @@ name: CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
   lint-and-test:
     name: Lint, Format Check, and Test
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
 
     steps:
       - name: Checkout code
@@ -18,7 +18,7 @@ jobs:
       - name: Set up Go 1.25
         uses: actions/setup-go@v5
         with:
-          go-version: '1.25.0'
+          go-version: "1.25.0"
           cache: true
 
       - name: Install golangci-lint
@@ -49,8 +49,13 @@ jobs:
             exit 1
           fi
 
-      - name: Run golangci-lint
-        run: make lint
+      - name: Generate routes
+        run: make generate
+
+      - name: Run golintci
+        uses: golangci/golangci-lint-action@v8
+        with:
+          version: v2.6.0
 
       - name: Run tests with Anvil
         run: make test
